force-app/main/default/objects/Wholesale_Order__c/Wholesale_Order__c.object-meta.xml
<CustomObject>
    <description>Object for orders used only by Wholsale</description>
    <label>Wholesale Order</label>
    <nameField>
        <displayFormat>O-{00000000}</displayFormat>
        <label>Order No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wholesale Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>