force-app/main/default/objects/Wholesale_Order__c/fields/Assignment_number__c.field-meta.xml
<CustomField>
    <fullName>Assignment_number__c</fullName>
    <label>Assignment number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>