force-app/main/default/objects/Wholesale_Order__c/fields/Delivery_Team__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Team__c</fullName>
    <label>Delivery Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data Delivery</fullName>
            </value>
            <value>
                <fullName>Invoicing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>