force-app/main/default/objects/Wholesale_Order__c/fields/Description_General_Notes__c.field-meta.xml
<CustomField>
    <fullName>Description_General_Notes__c</fullName>
    <label>Description (General Notes)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>