force-app/main/default/objects/Wholesale_Order__c/fields/Desired_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Delivery_Date__c</fullName>
    <label>Desired Delivery Date</label>
    <type>Date</type>
</CustomField>