force-app/main/default/objects/Wholesale_Order__c/fields/Fiber_Delivery_Provider__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Delivery_Provider__c</fullName>
    <label>Fiber Delivery Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telia fiber</fullName>
            </value>
            <value>
                <fullName>Last mile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>