force-app/main/default/objects/Wholesale_Order__c/fields/FS_Ticket_No__c.field-meta.xml
<CustomField>
    <fullName>FS_Ticket_No__c</fullName>
    <label>FS Ticket No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>