force-app/main/default/objects/Wholesale_Order__c/fields/Invoicing_Reference__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Reference__c</fullName>
    <label>Invoicing Reference</label>
    <length>200</length>
    <type>Text</type>
</CustomField>