force-app/main/default/objects/Wholesale_Order__c/fields/Last_Invoicing_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoicing_Date__c</fullName>
    <label>Last Invoicing Date</label>
    <type>Date</type>
</CustomField>