force-app/main/default/objects/Wholesale_Order__c/fields/Local_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Local_Contact_Email__c</fullName>
    <label>Local Contact Email</label>
    <type>Email</type>
</CustomField>