force-app/main/default/objects/Wholesale_Order__c/fields/Local_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Local_Contact_Name__c</fullName>
    <description>Order Contact Name</description>
    <label>Local Contact Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>