force-app/main/default/objects/Wholesale_Order__c/fields/Local_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Local_Contact_Phone__c</fullName>
    <label>Local Contact Phone</label>
    <type>Phone</type>
</CustomField>