force-app/main/default/objects/Wholesale_Order__c/fields/NDR_Order_No__c.field-meta.xml
<CustomField>
    <fullName>NDR_Order_No__c</fullName>
    <label>NDR Order No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>