force-app/main/default/objects/Wholesale_Order__c/fields/Old_Billing_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_Billing_Account_Number__c</fullName>
    <label>Old Billing Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>