force-app/main/default/objects/Wholesale_Order__c/fields/Old_Order_Contact__c.field-meta.xml
<CustomField>
    <fullName>Old_Order_Contact__c</fullName>
    <label>Old Order Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>