force-app/main/default/objects/Wholesale_Order__c/fields/Old_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_Order_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Old order ID, used for data migration matching.</description>
    <externalId>true</externalId>
    <label>Old Order ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>