force-app/main/default/objects/Wholesale_Order__c/fields/Old_order_number__c.field-meta.xml
<CustomField>
    <fullName>Old_order_number__c</fullName>
    <label>Old order number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>