force-app/main/default/objects/Wholesale_Order__c/fields/Opex_WBS__c.field-meta.xml
<CustomField>
    <fullName>Opex_WBS__c</fullName>
    <label>Opex WBS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>