force-app/main/default/objects/Wholesale_Order__c/fields/Order_Duration_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Order_Duration_in_Months__c</fullName>
    <label>Order Duration in Months</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
                <default>true</default>
                <label>12</label>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>72</fullName>
            </value>
            <value>
                <fullName>84</fullName>
            </value>
            <value>
                <fullName>96</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>