force-app/main/default/objects/Wholesale_Order__c/fields/Order_sent_to_Data__c.field-meta.xml
<CustomField>
    <fullName>Order_sent_to_Data__c</fullName>
    <label>Order sent to Data</label>
    <type>Date</type>
</CustomField>