force-app/main/default/objects/Wholesale_Order__c/fields/Order_Started__c.field-meta.xml
<CustomField>
    <fullName>Order_Started__c</fullName>
    <label>Order Started</label>
    <type>Date</type>
</CustomField>