force-app/main/default/objects/Wholesale_Order__c/fields/Outer_Inner_VLAN__c.field-meta.xml
<CustomField>
    <fullName>Outer_Inner_VLAN__c</fullName>
    <label>Outer/Inner VLAN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>