force-app/main/default/objects/Wholesale_Order__c/fields/Ready_for_Invoice_Review__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Invoice_Review__c</fullName>
    <description>Date staging when Status was changed to Ready for Invoice Review</description>
    <label>Ready for Invoice Review</label>
    <type>Date</type>
</CustomField>