force-app/main/default/objects/Wholesale_Order__c/fields/RT_Number__c.field-meta.xml
<CustomField>
    <fullName>RT_Number__c</fullName>
    <label>RT Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>