force-app/main/default/objects/Wholesale_Order__c/fields/SAP_PR_No__c.field-meta.xml
<CustomField>
    <fullName>SAP_PR_No__c</fullName>
    <label>SAP PR No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>