force-app/main/default/objects/Wholesale_Order__c/fields/Sent_to_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Invoicing__c</fullName>
    <description>Date staging when Status was changed to Invoicing</description>
    <label>Sent to Invoicing</label>
    <type>Date</type>
</CustomField>