force-app/main/default/objects/Wholesale_Order__c/fields/Solita_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Solita_Order_No__c</fullName>
    <label>Solita Order No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>