force-app/main/default/objects/Wholesale_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Ready for Delivery</fullName>
            </value>
            <value>
                <fullName>Delivery ongoing</fullName>
            </value>
            <value>
                <fullName>Waiting for customer</fullName>
            </value>
            <value>
                <fullName>Ready for Invoice review</fullName>
            </value>
            <value>
                <fullName>Invoicing</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>