force-app/main/default/objects/Wholesale_Order__c/fields/Total_Monthly_Charge_and_One_Time_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Charge_and_One_Time_Charge__c</fullName>
    <formula>(Total_Monthly_Charge__c *  BLANKVALUE(VALUE(TEXT(Order_Duration_in_Months__c)),1) ) +  Total_One_Time_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Order Value for period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>