force-app/main/default/objects/Wholesale_Order__c/fields/Total_One_Time_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_One_Time_Charge__c</fullName>
    <label>Total_One_Time_Charge</label>
    <summarizedField>Installation_Address__c.Total_One_Time_Charge__c</summarizedField>
    <summaryForeignKey>Installation_Address__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>