force-app/main/default/objects/Wholesale_Order__c/fields/Vendor_Circuit__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Circuit__c</fullName>
    <label>Vendor Circuit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>