force-app/main/default/objects/Wholesale_Order__c/fields/WBS_IP__c.field-meta.xml
<CustomField>
    <fullName>WBS_IP__c</fullName>
    <label>WBS IP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>