force-app/main/default/objects/Wholesale_Order__c/fields/WBS_Upper__c.field-meta.xml
<CustomField>
    <fullName>WBS_Upper__c</fullName>
    <label>WBS Upper</label>
    <length>100</length>
    <type>Text</type>
</CustomField>