force-app/main/default/objects/Wholesale_Order__c/fields/Wholesale_Account__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wholesale Account</label>
    <referenceTo>Wholesale_Account__c</referenceTo>
    <relationshipLabel>Wholesale Orders</relationshipLabel>
    <relationshipName>Wholesale_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>