force-app/main/default/objects/Wholesale_Order__c/fields/Wholesale_Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account No.</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Wholesale_Account__c</field>
            <operation>equals</operation>
            <valueField>Wholesale_Billing_Account__c.Wholesale_Account__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Wholesale_Billing_Account__c</referenceTo>
    <relationshipLabel>Wholesale Orders</relationshipLabel>
    <relationshipName>Wholesale_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>