force-app/main/default/objects/Wholesale_Order__c/fields/Wholesale_Order__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_Order__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Wholesale_Order__c/&quot;&amp;Id&amp;&quot;/view&quot;,Wholesale_Account__r.Name&amp;&quot; - &quot;&amp;Order_Name__c,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wholesale Order</label>
    <type>Text</type>
</CustomField>