force-app/main/default/objects/Wholesale_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Wholesale_Order__c</columns>
    <columns>Wholesale_Billing_Account__c</columns>
    <columns>Local_Contact_Name__c</columns>
    <columns>Delivery_Team__c</columns>
    <columns>Order_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Order_Started__c</columns>
    <columns>Circuit_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>