force-app/main/default/objects/Wholesale_Order__c/listViews/Ready_for_Invoice_Review.listView-meta.xml
<ListView>
    <fullName>Ready_for_Invoice_Review</fullName>
    <columns>Wholesale_Order__c</columns>
    <columns>Planned_Delivery_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Circuit_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ready for Invoice review</value>
    </filters>
    <label>Ready for Invoice Review</label>
</ListView>